--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
     <string name="menu_achats">Achats</string>
     <string name="menu_option">Option</string>
     <string name="menu_amis">Amis</string>
-    <string name="menu_send">Send</string>
+    <string name="menu_connection">Connexion</string>
 </resources>
