Résolution des problemes de version du template.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="Home">Home</string>
     <string name="Profil">Profil</string>
     <string name="Connect">Se connecter</string>
-    <string name="Notification">Notification</string>
+    <string name="Magasin">Magasin</string>
     <string name="menu">Menu</string>
 
     <!--    menu-->
