--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="Home">Home</string>
     <string name="Profil">Profil</string>
     <string name="Connect">Se connecter</string>
-    <string name="Notification">Notification</string>
+    <string name="Magasin">Magasin</string>
     <string name="menu">Menu</string>
 
     <!--    menu-->
@@ -43,6 +43,9 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
