--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,16 +36,24 @@
     <string name="menu_DarkMode">Mode nuit</string>
     <string name="title_activity_login">Sign in</string>
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
+    <string name="prompt_password">Mot de passe</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+<!--    Connexion-->
+    <string name="titreConnection">"Connexion"</string>
+    <string name="invalid_username">Mauvais identifiant</string>
+    <string name="invalid_password">Le mot de passe doit faire plus de 5 caractères </string>
+    <string name="login_failed">"Erreur connection"</string>
+    <string name="inscription">"S'inscrire"</string>
+
+    <!--    Inscription-->
+    <string name="titreInscription">"Inscription"</string>
+    <string name="prénom">"Prénom"</string>
+    <string name="Nom">"Nom"</string>
+
+
 
 
 </resources>
