--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="voir_tout"><u>Voir tout</u></string>
+    <string name="meilleursOffres">Les meilleurs offres</string>
+    <string name="Sous_titre">Partagez pour payer moins chère.</string>
 
 
 </resources>
