--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
 
-
     <!--Accueil-->
     <string name="TitreSection1">Chercher un produit</string>
     <string name="DescriptionSection1">Faites des recherches en selectionnant le magasin pret de chez vous.</string>
@@ -29,10 +28,10 @@
     <!--    menu-->
     <string name="menu_accueil">Accueil</string>
     <string name="menu_magasins">Magasins</string>
-    <string name="menu_achats">Achats</string>
+    <string name="menu_achats">Vos achats</string>
     <string name="menu_option">Option</string>
-    <string name="menu_amis">Amis</string>
-    <string name="menu_connection">Connexion</string>
+    <string name="menu_amis">Vos amis</string>
+    <string name="menu_connection">Se connecter</string>
     <string name="menu_DarkMode">Mode nuit</string>
     <string name="title_activity_login">Sign in</string>
     <string name="prompt_email">Email</string>
@@ -44,11 +43,30 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
 
+    <!--    amis-->
+    <string name="presentation_fragment_amis">Ici vous pouvez consulter les achats auxquelles vous vous êtes inscrits</string>
+    <string name="se_connecter">Se Connecter</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="voir_tout"><u>Voir tout</u></string>
     <string name="meilleursOffres">Les meilleurs offres</string>
     <string name="Sous_titre">Partagez pour payer moins chère.</string>
 
+    <!-- master_bottom_navigation-->
+    <string name="Home">Home</string>
+    <string name="Profil">Profil</string>
+    <string name="Connect">Se connecter</string>
+    <string name="Magasin">Magasin</string>
+
+    <!--    Connexion-->
+    <string name="titreConnection">"Connexion"</string>
+    <string name="inscrire"><u>"Pas de compte ? Inscrivez-vous"</u></string>
+
+    <!--    Inscription-->
+    <string name="titreInscription">"Inscription"</string>
+    <string name="prénom">"Prénom"</string>
+    <string name="Nom">"Nom"</string>
+    <string name="déjàInscrit"><u>"Déjà inscrit ? Connectez-vous"</u></string>
 
 </resources>
